# trencadis

./: Cargo.toml  README.md
display-server/: Cargo.toml
display-server/src/: frames.rs  main.rs  transcript.rs  utils.rs
gestures/: Cargo.toml
gestures/src/: lib.rs
input/: Cargo.toml
input/src/: lib.rs
input/src/events/: keyboard.rs  mod.rs  pointer.rs
input/src/gestures/: mod.rs
