[package]
name = "display-server"
version = "0.1.0"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]

[dependencies]
app_units = "0.4"
euclid = "0.11"
gleam = "0.4"
palette = "0.2.1"
petgraph = "0.4.4"
servo-glutin = "0.10.1"
webrender = { git = "https://github.com/servo/webrender", rev = "87176871" }
webrender_traits = { git = "https://github.com/servo/webrender", rev = "87176871" }
