[package]
name = "display-server"
version = "0.1.0"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
app_units = "0.4"
euclid = "0.11"
gleam = "0.4"
palette = "0.2.1"
petgraph = "0.4.4"
servo-glutin = "0.10.1"
webrender = { git = "https://github.com/servo/webrender", rev = "be5a41ec" }
webrender_traits = { git = "https://github.com/servo/webrender", rev = "be5a41ec" }
