[package]
name = "display-server"
version = "0.1.0"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT/Apache-2.0"

[dependencies]
app_units = "0.5"
gleam = "0.4.8"
rusttype = "0.2.1"
servo-glutin = "0.12"
webrender = { git = "https://github.com/servo/webrender", rev = "d397737" }
